hphp/hack/test/typecheck/let/let_lambda_error3.php
<?hh // experimental

function foo(): void {
  let x = 10;
  let f : (function(): string) = () ==> {
    return x;
  };
  f();
}
